# hermitretro

./: LICENSE.txt  README.md
src/: JLCPCB_Gerber_Generater_2-layer.cam
src/eagle/: HermitRetro.lbr
src/zxzero/: README.md
src/zxzero/doc/: DESIGN.md  HermitRetro-ZXZero-BOM.xlsx
src/zxzero/software/zxzerodiag/: CMakeLists.txt  README.md
src/zxzero/software/zxzerodiag/src/: gpio_membrane.c  gpio_membrane.h  keymap.h  pins.h  zxzerodiag.c
